# secret-scanner-cli

./: .env.example  .gitattributes  .gitignore  .pre-commit-hooks.yaml  .secretscanner-baseline.json  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  secret-scan.yml
docs/: architecture.md
docs/demo/: generate_demo_gif.py  generate_example_results.py
docs/demo/reports/: example-report.html  example-report.json  example-terminal.txt
src/secret_scanner/: __init__.py  __main__.py  baseline.py  cli.py  directives.py  github_client.py  local_scanner.py  models.py  patterns.yaml  reporter.py  scanner.py
src/secret_scanner/detectors/: __init__.py  entropy_detector.py  regex_detector.py
tests/: test_baseline.py  test_cli.py  test_detectors.py  test_github_client.py  test_local_scanner.py  test_reporter.py  test_scanner.py
