[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardesa-secret-scanner"
version = "0.1.0"
description = "A Python CLI for scanning GitHub repositories for exposed secrets."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Juan" }
]
keywords = ["security", "secret-scanning", "github", "cli", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/JuanCardesa/secret-scanner-cli"
Repository = "https://github.com/JuanCardesa/secret-scanner-cli"
Changelog = "https://github.com/JuanCardesa/secret-scanner-cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/JuanCardesa/secret-scanner-cli/issues"

[project.scripts]
secret-scanner = "secret_scanner.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-PyYAML>=6.0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secret_scanner = ["patterns.yaml", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
branch = true
source = ["secret_scanner"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.coverage.xml]
output = "coverage.xml"
